--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,6 +7,7 @@
     </aside>
     <div class="col-md-7 bg-F7F7F7">
       <h3>Main Contents</h3>
+      <%= render 'shared/abc_edit' %>
     </div>
     <div class="col-md-3">
       <h3>Main Contents</h3>
