--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container-fluid">
-    <%= link_to "Phrase", root_path, id: "logo" %>
+    <%= link_to (fa_icon "music", text: "Phrasen", class: "text-info"), root_path, id: "logo" %>
     <nav>
       <button type="button" class="navbar-toggle"
       data-toggle="collapse" data-target="#navbar-menu">
