--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -15,7 +15,7 @@
   </div>
 <% else %>
   <div class="center jumbotron">
-    <h1>Welcome to the Phrase</h1>
+    <h1>Welcome to the Phrasen</h1>
 
     <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
   </div>
