--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
-<header class="navbar navbar-fixed-top navbar-inverse">
+<header class="navbar navbar-fixed-top navbar-inverse mb-0">
   <div class="container-fluid">
-    <%= link_to (fa_icon "music", text: "Phrasen", class: "text-info"), root_path, id: "logo" %>
+    <%= link_to (fa_icon "music", text: "Noten", class: "text-info"), root_path, id: "logo" %>
     <nav>
       <button type="button" class="navbar-toggle"
       data-toggle="collapse" data-target="#navbar-menu">
@@ -10,7 +10,6 @@
       </button>
       <div class="collapse navbar-collapse" id="navbar-menu">
         <ul class="nav navbar-nav navbar-right">
-          <li><%= link_to "Home",   root_path %></li>
           <li><%= link_to "Help",   '#' %></li>
           <% if logged_in? %>
             <li class="dropdown">
