--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<header class="navbar navbar-fixed-top navbar-inverse mb-0">
+<header class="navbar navbar-inverse mb-0">
   <div class="container-fluid">
     <%= link_to (fa_icon "music", text: "Noten", class: "text-info"), root_path, id: "logo" %>
     <nav>
