--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,11 +1,11 @@
 <% if logged_in? %>
   <div class="row">
     <aside class="col-md-2">
-      <section class="user_info">
-        <%= render 'shared/user_info' %>
+      <section class="phrase_list">
+        <%= render 'shared/phrase_list' %>
       </section>
     </aside>
-    <div class="col-md-7 bg-F7F7F7">
+    <div class="col-md-7 bg-F7F7F7" id="abc-paper">
       <%= render 'shared/abc_paper' %>
     </div>
     <div class="col-md-3">
