--- a/app/views/shared/_abc_edit.html.erb
+++ b/app/views/shared/_abc_edit.html.erb
@@ -19,7 +19,7 @@
   <%= f.label :abc, "ABC" %>
   <%= f.text_area :abc, rows: "8", cols: "80", class: "form-control" %>
 
-  <%= f.submit "Update", class: "btn btn-large btn-primary" %>
+  <%= f.submit "Save", class: "btn btn-large btn-primary" %>
 <% end %>
 
 <%= text_area_tag "area", nil, class: "area" %>
