--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -37,6 +37,11 @@
             <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
           <% end %>
         <% end %>
+        <%= form_tag "abc_phrases", class: "navbar-form navbar-right", method: :post, remote: true do %>
+          <%= button_tag class: "btn btn-info" do %>
+            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+          <% end %>
+        <% end %>
       </div>
     </nav>
   </div>
