--- a/app/views/abc_phrases/show.js.erb
+++ b/app/views/abc_phrases/show.js.erb
@@ -1,10 +1,10 @@
 //init edit form
-$('#abc_phrase_tytle').val('<%= @phrase.tytle %>');
-$('#abc_phrase_meter').val('<%= @phrase.meter %>');
-$('#abc_phrase_length').val('<%= @phrase.length %>');
-$('#abc_phrase_reference').val('<%= @phrase.reference %>');
-$('#abc_phrase_key').val('<%= @phrase.key %>');
-$('#abc_phrase_abc').text('<%= @phrase.abc %>');
+$('#abc_phrase_tytle').val('<%= escape_javascript(@phrase.tytle) %>');
+$('#abc_phrase_meter').val('<%= j(@phrase.meter) %>');
+$('#abc_phrase_length').val('<%= j(@phrase.length) %>');
+$('#abc_phrase_reference').val('<%= j(@phrase.reference) %>');
+$('#abc_phrase_key').val('<%= j(@phrase.key) %>');
+$('#abc_phrase_abc').text('<%= j(@phrase.abc) %>');
 
 //change post url of edit form
 $('#new_abc_phrase').attr('action', '/abc_phrases/' + <%= @phrase.id %>);
