Add delete function

--- a/app/views/abc_phrases/_abc_phrase.html.erb
+++ b/app/views/abc_phrases/_abc_phrase.html.erb
@@ -1,4 +1,4 @@
-<div class="col-md-12">
+<div class="col-md-12" id='abc_phrase_id_<%= abc_phrase.id %>'>
   <div class="col-md-12">
     <%= link_to abc_phrase.tytle, abc_phrase, remote: true, method: :get %>
   </div>
