Modify home view (display note anytime)

--- a/app/views/abc_phrases/destroy.js.erb
+++ b/app/views/abc_phrases/destroy.js.erb
@@ -1,1 +1,4 @@
-$('#abc_phrase_id_<%= @phrase.id %>').remove();
+var tgt   = $('#abc_phrase_id_<%= @phrase.id %>');
+var below = $('#abc_phrase_id_<%= @phrase.id %> + div:first a:first');
+tgt.remove();
+below.click();
