--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -16,6 +16,7 @@
   <script>initLength("");</script>
   <script>initKey("");</script>
   <script>updateAbcArea()</script>
+  <script>showTopPhrase()</script>
   <script type="text/javascript">
     window.onload = function() {
       abc_editor = new ABCJS.Editor("area", { paper_id: "paper0", warnings_id:"warnings" });
