Refactoring (change file paths)

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,10 +6,10 @@
       </section>
     </aside>
     <div class="col-md-7 bg-F7F7F7" id="abc-paper">
-      <%= render 'shared/abc_paper' %>
+      <%= render 'abc_phrases/abc_paper' %>
     </div>
     <div class="col-md-3">
-      <%= render 'shared/abc_edit' %>
+      <%= render 'abc_phrases/abc_edit' %>
     </div>
   </div>
   <script>initMeter("");</script>
