--- a/app/views/abc_phrases/show.js.erb
+++ b/app/views/abc_phrases/show.js.erb
@@ -1,10 +1,10 @@
 //init edit form
-$('#abc_phrase_tytle').val('<%= escape_javascript(@phrase.tytle) %>');
-$('#abc_phrase_meter').val('<%= j(@phrase.meter) %>');
-$('#abc_phrase_length').val('<%= j(@phrase.length) %>');
-$('#abc_phrase_reference').val('<%= j(@phrase.reference) %>');
-$('#abc_phrase_key').val('<%= j(@phrase.key) %>');
-$('#abc_phrase_abc').text('<%= j(@phrase.abc) %>');
+$('#abc_phrase_tytle')    .val('<%= j((@phrase.tytle).html_safe)     %>');
+$('#abc_phrase_meter')    .val('<%= j((@phrase.meter).html_safe)     %>');
+$('#abc_phrase_length')   .val('<%= j((@phrase.length).html_safe)    %>');
+$('#abc_phrase_reference').val('<%= j((@phrase.reference).html_safe) %>');
+$('#abc_phrase_key')      .val('<%= j((@phrase.key).html_safe)       %>');
+$('#abc_phrase_abc')     .text('<%= j((@phrase.abc).html_safe)       %>');
 
 //change post url of edit form
 $('#new_abc_phrase').attr('action', '/abc_phrases/' + <%= @phrase.id %>);
