Fix typo (from tytle to title)

--- a/app/views/abc_phrases/show.js.erb
+++ b/app/views/abc_phrases/show.js.erb
@@ -1,5 +1,5 @@
 //init edit form
-$('#abc_phrase_tytle')    .val('<%= j((@phrase.tytle).html_safe)     %>');
+$('#abc_phrase_title')    .val('<%= j((@phrase.title).html_safe)     %>');
 $('#abc_phrase_meter')    .val('<%= j((@phrase.meter).html_safe)     %>');
 $('#abc_phrase_length')   .val('<%= j((@phrase.length).html_safe)    %>');
 $('#abc_phrase_reference').val('<%= j((@phrase.reference).html_safe) %>');
