--- a/app/views/abc_phrases/_abc_edit.html.erb
+++ b/app/views/abc_phrases/_abc_edit.html.erb
@@ -1,8 +1,8 @@
 <%= form_for(@phrase) do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
 
-  <%= f.label :tytle %>
-  <%= f.text_field :tytle, class: 'form-control' %>
+  <%= f.label :title %>
+  <%= f.text_field :title, class: 'form-control' %>
 
   <%= f.label :meter %>
   <%= f.select :meter, [], {}, { class: 'form-control' } %>
