--- a/app/views/abc_phrases/_abc_phrase.html.erb
+++ b/app/views/abc_phrases/_abc_phrase.html.erb
@@ -1,6 +1,6 @@
 <div class="col-md-12" id='abc_phrase_id_<%= abc_phrase.id %>'>
   <div class="col-md-12">
-    <%= link_to abc_phrase.tytle, abc_phrase, remote: true, method: :get %>
+    <%= link_to abc_phrase.title, abc_phrase, remote: true, method: :get %>
   </div>
   <div class="col-md-12">
     <%= link_to abc_phrase, method: :delete, remote: true, data: { confirm: "You sure?" } do %>
