--- a/app/views/abc_phrases/destroy.js.erb
+++ b/app/views/abc_phrases/destroy.js.erb
@@ -2,3 +2,6 @@ var tgt   = $('#abc_phrase_id_<%= @phrase.id %>');
 var below = $('#abc_phrase_id_<%= @phrase.id %> + div:first a:first');
 tgt.remove();
 below.click();
+
+//曲数のデクリメント
+updateListCount(-1);
