Add tag and book icon on header

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -31,6 +31,15 @@ div.bg-F7F7F7 {
   background-color: #F7F7F7;
 }
 
+button.margin-LR-15 {
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
+button.margin-R-15 {
+  margin-right: 15px;
+}
+
 /* typography */
 
 h1, h2, h3, h4, h5, h6 {
