#22 Making top page (halfway)

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -31,6 +31,10 @@ div.bg-F7F7F7 {
   background-color: #F7F7F7;
 }
 
+div.bg-gray {
+  background-color: #f6f8fa;
+}
+
 button.margin-LR-15 {
   margin-left: 15px;
   margin-right: 15px;
