--- a/app/views/abc_phrases/_abc_edit.html.erb
+++ b/app/views/abc_phrases/_abc_edit.html.erb
@@ -1,4 +1,10 @@
+
+
 <%= form_for(@phrase) do |f| %>
+  <span class="glyphicon glyphicon-tags" aria-hidden="true"></span>
+
+  <hr>
+
   <%= render 'shared/error_messages', object: f.object %>
 
   <%= f.label :title %>
