--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -40,9 +40,26 @@
         <% end %>
 
 				<!-- tag -->
-        <%= button_tag class: "btn btn-info navbar-btn navbar-right margin-LR-15" do %>
+        <%= button_tag class: "btn btn-info navbar-btn navbar-right margin-LR-15", "data-toggle": "modal", "data-target": "#tagModal" do %>
           <span class="glyphicon glyphicon-tags" aria-hidden="true"></span>
         <% end %>
+        <div id="tagModal" class="modal fade">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                        <h4 class="modal-title">タグ検索</h4>
+                    </div>
+                    <div class="modal-body">
+                      登録されているタグがありません。
+                    </div>
+                    <div class="modal-footer">
+                        <%= button_tag "キャンセル", class: "btn btn-default", "data-dismiss": "modal" %>
+                        <%= button_tag "検索", class: "btn btn-info", "data-dismiss": "modal" %>
+                    </div>
+                </div>
+            </div>
+        </div>
 
 				<!-- book -->
         <%= button_tag class: "btn btn-info navbar-btn navbar-right margin-R-15" do %>
