--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -31,10 +31,10 @@
     <%= image_tag 'logo.png' %>
     <h2>あなただけの楽譜集を作成できるサービス</h2>
     <div class="row">
-      <div class="col-md-1 col-md-offset-5">
+      <div class="col-md-1 col-md-offset-4">
         <%= link_to "ユーザー登録", signup_path, class: "btn btn-lg btn-primary" %>
       </div>
-      <div class="col-md-1">
+      <div class="col-md-1 col-md-offset-2">
         <%= link_to "ログイン",       login_path,  class: "btn btn-lg btn-primary" %>
       </div>
     </div>
@@ -88,7 +88,7 @@
       </div>      
     </div>
   </div>    
-  <div class="row center pd-120-0">
+  <div class="center pd-120-0">
     <%= link_to "ユーザー登録", signup_path, class: "btn btn-lg btn-primary" %>
   </div>
   <div class="center">
