#1 Add tag function

--- a/app/views/abc_phrases/_abc_edit.html.erb
+++ b/app/views/abc_phrases/_abc_edit.html.erb
@@ -3,8 +3,9 @@
 <%= form_for(@phrase) do |f| %>
   <span class="glyphicon glyphicon-tags" aria-hidden="true"></span>
 
-  <div id="tags">
-  </div>
+  <div id="tag_form">
+		<%# ajax: _tag_form.html.erb %>
+	</div>
 
   <hr>
 
