--- a/app/views/abc_phrases/show.js.erb
+++ b/app/views/abc_phrases/show.js.erb
@@ -1,8 +1,7 @@
 //init tags
-$('#tags').empty();
-<% @phrase.tags.each do |tag| %>
-  $('#tags').prepend('<%= j(render tag) %>');
-<% end %>
+$('#tag_form').html(
+	"<%= j(render 'tag_form') %>"
+);
 
 //init edit form
 $('#abc_phrase_title')    .val('<%= j((@phrase.title).html_safe)     %>');
