--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
     <%= csrf_meta_tags %>
     <%= favicon_link_tag %>
     <%= analytics_init if Rails.env.production? %>
+    <%= favicon_link_tag 'logo.png', :rel => 'apple-touch-icon', :type => 'image/png' %>
   </head>
   <body>
     <% if logged_in? %>
